# RaytracingOpenGL

./: CMakeLists.txt  imgui.ini
include/: ezgl.hpp  window.hpp
shaders/: common.glsl  quad.fsh  quad.vsh
src/: ezgl.cpp  main.cpp  window.cpp
